# Adhancron

./: .dockerignore  .env.example  .gitignore  ADHAN_STRICT_GUIDE.md  CASAOS.md  CLAUDE.md  DEPLOYMENT.md  Dockerfile  README.md  VERSION  adhan_config.py  apply_adhan_cron.py  check_methods.py  cron_check.py  debug_wifi.py  direct_speaker_test.py  docker-compose.yml  docker-entrypoint.sh  eid_schedule.py  emergency_run.py  final_test.py  generate_prayer_times.py  ha_custom_test.py  ha_debug_suite.py  ha_id_test.py  ha_mp3_test.py  main.py  main_c3.py  main_internal_dac.py  max7219.py  network_speakers.py  prayer_times.json  pytest.ini  range_server.py  requirements.txt  scan_wifi.py  schedule.json  schedule_cron.py  test_display_only.py  test_ha.py  (+9 more)
adhan_web_ui/: README.md  app.py  cron_manager.py  override_manager.py  requirements.txt  settings_manager.py  start_web_ui.sh
casaos/: docker-compose.yml
desktop/: Adhancron.spec  README.md  __init__.py  launcher.py  requirements.txt  scheduler.py
firmware/esp32-s3-prayer-clock/main/: CMakeLists.txt  audio_storage.h  battery_monitor.c  battery_monitor.h  battery_status.c  battery_status.h  board_config.h  cast_sender.c  cast_sender.h  display_ui.c  display_ui.h  dlna_sender.c  dlna_sender.h  eid.c  eid.h  firmware_update.c  firmware_update.h  idf_component.yml  main.c  prayer_times.c  prayer_times.h  ramadan.c  ramadan.h  settings.c  settings.h  web_server.c  web_server.h
firmware/esp32-s3-prayer-clock/main/web/: app.css  app.js  index.html  location.html  wifi.html
raspberry-pi/: README.md  adhancron-kiosk.sh  (+7 more)
(+44 files in other folders)
